--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -5,6 +5,11 @@ ja:
         male: "男性"
         female: "女性"
         other: "その他"
+    coordinate:
+      style:
+        mens: "メンズ"
+        ladies: "レディース"
+        unisex: "ユニセックス"
   activerecord:
     errors:
       messages:
