--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -17,6 +17,10 @@ ja:
         restrict_dependent_destroy:
           has_one: "%{record}が存在しているので削除できません"
           has_many: "%{record}が存在しているので削除できません"
+    attributes:
+      coordinate:
+        style: "スタイル"
+        coordinate_image: "コーディネート画像"
   date:
     abbr_day_names:
     - 日
