--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -21,6 +21,7 @@ ja:
       coordinate:
         style: "スタイル"
         coordinate_image: "コーディネート画像"
+        introduction: "紹介"
   date:
     abbr_day_names:
     - 日
